@@ -1,27 +1,23 @@
-package edu.iu.saikotha.primeservice.repository;
+package edu.se.primesservice.repository;
 
-import edu.iu.saikotha.primeservice.model.Customer;
+import edu.se.primesservice.model.Customer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Repository;
 
-import java.nio.file.*;
-import java.util.List;
+
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-
-
-import static org.springframework.security.config.http.MatcherType.regex;
-
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
+import java.util.List;
 
 @Repository
-
-public class AuthenticationFileRepository implements IAuthenticationRepository {
-
-    private static final Logger LOG =
-            (Logger) LoggerFactory.getLogger(AuthenticationFileRepository.class);
-
+public class AuthenticationFileRepository implements IAuthenticationRepository{
+    private static final Logger LOG = LoggerFactory.getLogger(AuthenticationFileRepository.class);
     private static final String DATABASE_NAME = "data/customers.txt";
     private static final String NEW_LINE = System.lineSeparator();
 
@@ -30,59 +26,46 @@ public class AuthenticationFileRepository implements IAuthenticationRepository {
         file.getParentFile().mkdirs();
         try{
             file.createNewFile();
-
         }
         catch (IOException e){
             LOG.error(e.getMessage());
         }
     }
 
-
-    public Customer findByUsername(String username) throws IOException {
-        // Example implementation
+    @Override
+    public Customer findByUsername(String username) throws IOException{
         Path path = Paths.get(DATABASE_NAME);
         List<String> data = Files.readAllLines(path);
-        for (String line : data) {
-            if (!line.trim().isEmpty()) {
+        for(String line:data){
+            if(!line.trim().isEmpty()){
                 String[] properties = line.split(",");
-                if (properties[0].trim().equalsIgnoreCase(username.trim())) {
-                    return new Customer(properties[0].trim(), properties[1].trim());
+                if (properties[0].trim().equalsIgnoreCase(username.trim())){
+                    return new Customer(properties[0].trim(),properties[1].trim());
                 }
             }
         }
 
-        return null; // or throw an exception if preferred
+        return null;
     }
 
     @Override
-    public boolean save(Customer customer) throws IOException {
+    public boolean save(Customer customer) throws IOException{
+        System.out.println(customer);
         Customer x = findByUsername(customer.getUsername());
+        System.out.println(x);
         if(x==null){
-        Path path = Paths.get(DATABASE_NAME);
-        String data = String.format("%1$s,%2$s",
-                customer.getUsername().trim(),
-                customer.getPassword().trim());
-        data += NEW_LINE;
-        Files.write(path,
-                data.getBytes(StandardCharsets.UTF_8),
-                StandardOpenOption.CREATE,
-                StandardOpenOption.APPEND);
-        return true;
-
+            Path path = Paths.get(DATABASE_NAME);
+            String data = String.format("%1$s,%2$s",
+                    customer.getUsername().trim(),
+                    customer.getPassword().trim());
+            data += NEW_LINE;
+            System.out.println(data);
+            Files.writeString(path,
+                    data,
+                    StandardOpenOption.CREATE,
+                    StandardOpenOption.APPEND);
+            return true;
         }
-
         return false;
     }
 }
-
-//public AuthenticationFileRepository(){
-//    File file = new File(DATABASE_NAME);
-//    file.getParentFile().mkdirs();
-//    try{
-//        file.createNewFile();
-//
-//    }
-//    catch (IOException e){
-//        LOG.error(e.getMessage());
-//    }
-//}
